<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary">

            <TextView
                android:id="@+id/tv_login_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/login_form"
                android:textColor="@color/white_full"
                android:textSize="@dimen/text_heading_1x"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_user_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tv_login_form"
                android:layout_below="@id/tv_login_form"
                android:layout_marginTop="@dimen/margin_large"
                android:src="@drawable/dummy_user_profile" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tv_mobile_or_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_user_profile"
                android:layout_margin="@dimen/margin_large">

                <EditText
                    android:id="@+id/et_mobile_or_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_or_email"
                    android:textColorHint="@color/white_full" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_mobile_or_email"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColorHint="@color/white_full" />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/cb_remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Remember me"
                android:layout_below="@id/tv_password"
                android:layout_alignLeft="@id/tv_password"
                android:layout_marginTop="@dimen/margin_large"
                android:textColor="@color/white_full" />

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_below="@id/tv_password"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_alignTop="@id/cb_remember_me"
                android:layout_marginTop="@dimen/margin_medium"
                android:textSize="@dimen/text_regular"
                android:textColor="@color/white_full"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_login"
                android:textAllCaps="false"
                android:layout_below="@id/cb_remember_me"
                android:layout_margin="@dimen/margin_large"
                android:textColor="@color/white_full"
                android:background="@color/colorPink"/>

            <TextView
                android:id="@+id/tv_create_new_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_new_account"
                android:layout_centerInParent="true"
                android:layout_below="@id/btn_login"
                android:textColor="@color/white_full" />

            <TextView
                android:id="@+id/tv_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="(or)"
                android:layout_centerInParent="true"
                android:layout_below="@id/tv_create_new_account"
                android:layout_marginTop="@dimen/margin_medium"
                android:textColor="@color/white_full" />

            <LinearLayout
                android:id="@+id/ll_fb_twitter_gmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/tv_or"
                android:layout_alignLeft="@id/tv_create_new_account"
                android:layout_marginLeft="@dimen/margin_medium"
                >

                <ImageView
                    android:id="@+id/iv_facebook"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/fb_icon"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginRight="@dimen/margin_medium_2"/>

                <ImageView
                    android:id="@+id/iv_twitter"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/twitter_icon"
                    android:layout_toRightOf="@id/iv_facebook"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginRight="@dimen/margin_medium_2"/>

                <ImageView
                    android:id="@+id/iv_google_plus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/google_plus_icon"
                    android:layout_toRightOf="@id/iv_twitter"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/margin_medium"/>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>


</android.support.design.widget.CoordinatorLayout>